code comment for vm args